--- a/index.html
+++ b/index.html
@@ -95,5 +95,8 @@
 		<script type="text/javascript" src="./js/imagesloaded.min.js" id="imagesloaded-js"></script>
 		<script type="text/javascript" src="./js/masonry.min.js" id="masonry-js"></script>
 		<script type="text/javascript" src="./js/functions.js" id="bushwick-functions-js"></script>
+		<!-- Cloudflare Web Analytics -->
+		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "cbda5fc3b0424815ae365d792888f466"}'></script>
+		<!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
