--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 			</div>
 		</div>
 
-        <script type="text/javascript" src="./js/sky.js"></script>
-        <script type="text/javascript" src="https://api.7585.net.cn/shici/api.php?data=c&type=js"></script>
-        <script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
+        	<script type="text/javascript" src="./js/sky.js"></script>
+        	<script type="text/javascript" src="https://api.7585.net.cn/shici/api.php?data=c&type=js"></script>
+        	<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 		<script type="text/javascript" src="./js/db.min.js" id="regenerator-runtime-js"></script>
 		<script type="text/javascript" src="./js/wp-polyfill.min.js" id="wp-polyfill-js"></script>
 		<script type="text/javascript" src="./js/db.min.js" id="wpdjs-js"></script>
@@ -96,7 +96,8 @@
 		<script type="text/javascript" src="./js/masonry.min.js" id="masonry-js"></script>
 		<script type="text/javascript" src="./js/functions.js" id="bushwick-functions-js"></script>
 		<!-- Cloudflare Web Analytics -->
-		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "cbda5fc3b0424815ae365d792888f466"}'></script>
+<!-- 		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "cbda5fc3b0424815ae365d792888f466"}'></script> -->
+		<script defer src='./js/beacon.min.js' data-cf-beacon='{"token": "cbda5fc3b0424815ae365d792888f466"}'></script>
 		<!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
