--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 
         	<script type="text/javascript" src="./js/sky.js"></script>
-        	<script type="text/javascript" src="https://api.7585.net.cn/shici/api.php?data=c&type=js"></script>
+<!-- 已失效     	<script type="text/javascript" src="https://api.7585.net.cn/shici/api.php?data=c&type=js"></script> -->
         	<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 		<script type="text/javascript" src="./js/db.min.js" id="regenerator-runtime-js"></script>
 		<script type="text/javascript" src="./js/wp-polyfill.min.js" id="wp-polyfill-js"></script>
