--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <!--ICP备案-->
 				<a target="_blank" href="http://beian.miit.gov.cn/#/Integrated/recordQuery" style="display:inline-block;text-decoration:none;">
 					<img src="./img/icp.png" style="float:left;width: 16px;height: 16px;">
-					<p style="float:left;height:16px;line-height:16px;margin: 0 0 0 5px;font-size: 14px; color:#ffffff;">京ICP备2022017766号-2</p>
+					<p style="float:left;height:16px;line-height:16px;margin: 0 0 0 5px;font-size: 14px; color:#ffffff;">京ICP备2022017766号</p>
 				</a>
                 <!--公安备案-->
                 <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011402053911" style="display:inline-block;">
